--- a/package.json
+++ b/package.json
@@ -1,22 +1,35 @@
 {
-  "name": "outreach-crons",
-  "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
+  "name": "the-outreach-backend",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "start": "node src/app.js",
-    "dev": "nodemon src/app.js"
+    "start": "STAGE=production node src/app.js",
+    "dev": "STAGE=developement nodemon src/app.js"
   },
   "dependencies": {
+    "axios": "^1.4.0",
+    "bcrypt": "^5.1.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
+    "cron": "^2.3.0",
     "debug": "~2.6.9",
+    "dotenv": "^16.0.3",
     "express": "~4.16.1",
+    "googleapis": "^118.0.0",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "joi": "^17.9.2",
+    "lodash": "^4.17.21",
+    "lodash.merge": "^4.6.2",
+    "moment": "^2.29.4",
+    "moment-timezone": "^0.5.43",
     "mongoose": "^7.1.0",
     "morgan": "~1.9.1",
-    "nodemailer": "^6.9.1",
-    "nodemon": "^2.0.22"
+    "node-cron": "^3.0.2",
+    "nodemailer": "^6.9.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22",
+    "prettier": "^2.8.8"
   }
 }
